; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mlang/extr_mlang.c_MLangConvertCharset_create.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mlang/extr_mlang.c_MLangConvertCharset_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.convert_charset = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32* }

@CLASS_E_NOAGGREGATION = common dso_local global i32 0, align 4
@E_OUTOFMEMORY = common dso_local global i32 0, align 4
@MLangConvertCharsetVtbl = common dso_local global i32 0, align 4
@S_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8**)* @MLangConvertCharset_create to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @MLangConvertCharset_create(i32* %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8**, align 8
  %6 = alloca %struct.convert_charset*, align 8
  store i32* %0, i32** %4, align 8
  store i8** %1, i8*** %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i32, i32* @CLASS_E_NOAGGREGATION, align 4
  store i32 %10, i32* %3, align 4
  br label %31

11:                                               ; preds = %2
  %12 = load i8**, i8*** %5, align 8
  store i8* null, i8** %12, align 8
  %13 = call i32 (...) @GetProcessHeap()
  %14 = call %struct.convert_charset* @HeapAlloc(i32 %13, i32 0, i32 16)
  store %struct.convert_charset* %14, %struct.convert_charset** %6, align 8
  %15 = load %struct.convert_charset*, %struct.convert_charset** %6, align 8
  %16 = icmp ne %struct.convert_charset* %15, null
  br i1 %16, label %19, label %17

17:                                               ; preds = %11
  %18 = load i32, i32* @E_OUTOFMEMORY, align 4
  store i32 %18, i32* %3, align 4
  br label %31

19:                                               ; preds = %11
  %20 = load %struct.convert_charset*, %struct.convert_charset** %6, align 8
  %21 = getelementptr inbounds %struct.convert_charset, %struct.convert_charset* %20, i32 0, i32 1
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  store i32* @MLangConvertCharsetVtbl, i32** %22, align 8
  %23 = load %struct.convert_charset*, %struct.convert_charset** %6, align 8
  %24 = getelementptr inbounds %struct.convert_charset, %struct.convert_charset* %23, i32 0, i32 0
  store i32 1, i32* %24, align 8
  %25 = load %struct.convert_charset*, %struct.convert_charset** %6, align 8
  %26 = getelementptr inbounds %struct.convert_charset, %struct.convert_charset* %25, i32 0, i32 1
  %27 = bitcast %struct.TYPE_2__* %26 to i8*
  %28 = load i8**, i8*** %5, align 8
  store i8* %27, i8** %28, align 8
  %29 = call i32 (...) @LockModule()
  %30 = load i32, i32* @S_OK, align 4
  store i32 %30, i32* %3, align 4
  br label %31

31:                                               ; preds = %19, %17, %9
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local %struct.convert_charset* @HeapAlloc(i32, i32, i32) #1

declare dso_local i32 @GetProcessHeap(...) #1

declare dso_local i32 @LockModule(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
